<resources>
    <string name="app_name">Android Example</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_message">Welcome to our App!</string>
    <string name="zero">0</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="accept">Accept</string>
    <string name="bad_input">Bad input</string>
    <string name="show_error">Show error</string>
    <string name="fragment_one_error">Fragment one error</string>
    <string name="fragment_example_error">Fragment example error</string>
    <string name="custom_button">Custom button</string>
    <string name="fragment_three">Fragment Three</string>
</resources>
